--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: p4pauitncorecommonacr.azurecr.io/templatepaymentsjavarepository
+    repository: p4pauitncorecommonacr.azurecr.io/p4padebtpositions
     tag: latest
     pullPolicy: Always
 
