feat: P4ADEV-1773 add PersonalDataDAO and Citizen DataSource (#4)
Co-authored-by: antonio.torre <antonio.torre@pagopa.it>

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -68,6 +68,10 @@ microservice-chart:
     DEBT_POSITIONS_DB_USER: db-piattaforma-unitaria-login-username
     DEBT_POSITIONS_DB_PASSWORD: db-piattaforma-unitaria-login-password
 
+    CITIZENDB_HOST: db-host
+    CITIZENDB_USER: db-mypay-login-username
+    CITIZENDB_PASSWORD: db-mypay-login-password
+
   # nodeSelector: {}
 
   # tolerations: []
