P4ADEV-1849 generating openApi in unitTests, failing if not committed

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,6 @@ management:
         exposure.include: "*"
       web:
         exposure.include: info, health
+
+springdoc:
+  writer-with-default-pretty-printer: true
