P4ADEV-1754 configuring inner security

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -64,6 +64,7 @@ microservice-chart:
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-connection-string
+    JWT_TOKEN_PUBLIC_KEY: jwt-public-key
     DEBT_POSITIONS_DB_HOST: db-host
     DEBT_POSITIONS_DB_USER: db-piattaforma-unitaria-login-username
     DEBT_POSITIONS_DB_PASSWORD: db-piattaforma-unitaria-login-password
