--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,3 +76,9 @@ jwt:
                 IwIDAQAB
                 -----END PUBLIC KEY-----}"
 
+rest:
+  organization:
+    base-url: "\${REST_ORGANIZATION_BASE_URL:http://p4pa-organization-microservice-chart:8080}"
+
+iuv:
+  informationSystemId: 00
