--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -61,7 +61,7 @@ microservice-chart:
     APPLICATIONINSIGHTS_PREVIEW_PROFILER_ENABLED: "false"
     ENABLE_AUDIT_APPENDER: "TRUE"
 
-    REST_ORGANIZATION_BASE_URL: "http://p4pa-organization-microservice-chart:8080"
+    ORGANIZATION_BASE_URL: "http://p4pa-organization-microservice-chart:8080"
 
 
   envSecret:
