P4ADEV-2009 payments event producer

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -84,6 +84,7 @@ microservice-chart:
     DATA_CIPHER_ENCRYPT_PASSWORD: data-cipher-encrypt-password
     DATA_CIPHER_HASH_PEPPER: data-cipher-hash-pepper
 
+    KAFKA_BINDER_BROKER: p4pa-payhub-kafka-broker
     KAFKA_PAYMENTS_PRODUCER_SASL_JAAS_CONFIG: p4pa-payhub-payments-evh-producer-jaas-config
 
   # nodeSelector: {}
