--- a/.github/workflows/flow-release.yml
+++ b/.github/workflows/flow-release.yml
@@ -52,7 +52,7 @@ jobs:
           azure_devops_pat: ${{ secrets.AZURE_DEVOPS_TOKEN }}
           azure_template_parameters: |
             {
-              "APPS_TOP": "[p4pa-workflow-hub]",
+              "APPS_TOP": "[p4pa-debt-positions]",
               "POSTMAN_BRANCH": "${{ github.ref_name }}",
-              "TRIGGER_MESSAGE": "p4pa-workflow-hub"
+              "TRIGGER_MESSAGE": "p4pa-debt-positions"
             }
