--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -68,6 +68,7 @@ microservice-chart:
     ENABLE_AUDIT_APPENDER: "TRUE"
 
     ORGANIZATION_BASE_URL: "http://p4pa-organization-microservice-chart:8080"
+    WORKFLOW_HUB_BASE_URL: "http://p4pa-workflow-hub-microservice-chart:8080"
 
 
   envSecret:
