P4ADEV-1725 fix application yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -133,4 +133,4 @@ rest:
     base-url: "\${WORKFLOW_HUB_BASE_URL:http://localhost:8082}"
 
 iuv:
-  informationSystemId: 00
+  informationSystemId: "00"
