P4ADEV-1725 modified workflow hub url

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -130,7 +130,7 @@ rest:
   organization:
     base-url: "\${ORGANIZATION_BASE_URL:http://localhost:8081}"
   workflow-hub:
-    base-url: "\${WORKFLOW_HUB_BASE_URL:http://localhost:8082}"
+    base-url: "\${WORKFLOW_HUB_BASE_URL:http://localhost:8082}/workflowhub"
 
 iuv:
   informationSystemId: "00"
